--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,16 @@
   </dependencies>
   <build>
     <finalName>SimpleTomcatWebApp</finalName>
+    <plugins>
+                <plugin>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>2.1.1</version>
+                    <configuration>
+                        <outputDirectory>webapps</outputDirectory>
+                        <warName>ROOT</warName>
+                        <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+                  </configuration>
+            </plugin>
+        </plugins>
   </build>
 </project>
